--- a/css/gamePage.css
+++ b/css/gamePage.css
@@ -1,3 +1,7 @@
+@font-face{
+    font-family: "Arvo Bold";
+    src: url("/assets/fonts/Arvo-Bold.ttf") format("truetype");
+}
 
 body{
     background-color: #F6943F;
