--- a/css/popUps.css
+++ b/css/popUps.css
@@ -1,16 +1,16 @@
 @font-face{
     font-family: "Slackey";
-    src: url("assets/fonts/Slackey-Regular.ttf") format("truetype");
+    src: url("../assets/fonts/Slackey-Regular.ttf") format("truetype");
 }
 
 @font-face{
     font-family: "Arvo Bold";
-    src: url("assets/fonts/Arvo-Bold.ttf") format("truetype");
+    src: url("../assets/fonts/Arvo-Bold.ttf") format("truetype");
 }
 
 @font-face{
     font-family: "Sniglet";
-    src: url("assets/fonts/Sniglet-Regular.ttf");
+    src: url("../assets/fonts/Sniglet-Regular.ttf") format("truetype");;
 }
 
 #howToPopUp{
