--- a/css/popUps.css
+++ b/css/popUps.css
@@ -1,17 +1,18 @@
 @font-face{
     font-family: "Slackey";
-    src: url("../assets/fonts/Slackey-Regular.ttf") format("truetype");
+    src: url("fonts/Slackey-Regular.ttf") format("truetype");
 }
 
 @font-face{
     font-family: "Arvo Bold";
-    src: url("../assets/fonts/Arvo-Bold.ttf") format("truetype");
+    src: url("/fonts/Arvo-Bold.ttf") format("truetype");
 }
 
 @font-face{
     font-family: "Sniglet";
-    src: url("../assets/fonts/Sniglet-Regular.ttf") format("truetype");;
+    src: url("/fonts/Sniglet-Regular.ttf") format("truetype");;
 }
+
 
 #howToPopUp{
     background-color:#FCF1A6;
