Index CSS and Buttons JS

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 
 @font-face{
     font-family: "Sniglet";
-    src: url("fonts/Sniglet-Regular.ttf") format("truetype");;
+    src: url("fonts/Sniglet-Regular.ttf") format("truetype");
 }
 
 body{
